# server/controllers/roleController.js
@@ -1,7 +1,78 @@
 "use strict";
 
-const Role = require("../models/role"),
+const jwt = require("jsonwebtoken"),
+  crypto = require("crypto"),
+  RoleName = require("../models/user"),
+  Role = require("../models/role"),
   config = require("../config/main");
+
+// Set role info from request
+function setRoleInfo(role) {
+  return {
+    _id: role._id,
+    roleName: roleName,
+    isActive: role.isActive
+  };
+}
+
+//========================================
+// Role Route
+//========================================
+
+exports.roleName = function(req, res, next) {
+  let roleInfo = setRoleInfo(req.role);
+  res.status(200).json({
+    ok: true,
+    token: "JWT " + generateToken(roleInfo),
+    roleName: roleInfo
+  });
+};
+
+//========================================
+// Registration Route
+//========================================
+
+exports.create = function(req, res, next) {
+  // Check for registration errors
+  const roleName = req.body.roleName;
+  const isActive = true;
+
+  // Return error if no roleName provided
+  if (!roleName) {
+    return res.status(422).send({ error: "You must enter an role name." });
+  }
+
+  Role.findOne({ roleName: roleName }, function(err, existingRoleName) {
+    if (err) {
+      return next(err);
+    }
+
+    // If roleName is not unique, return error
+    if (existingRoleName) {
+      return res.status(400).send({
+        ok: false,
+        error: "That roleName is already in use."
+      });
+    }
+
+    // If roleName is unique, create roleName
+    let role = new Role({
+      roleName: roleName,
+      isActive: isActive
+    });
+
+    role.save(function(err, role) {
+      if (err) {
+        return res.status(400).send({ ok: false, error: err });
+      }
+      return res.status(200).json({ ok: true, role: role });
+    });
+  });
+};
+
+//========================================
+// Search Route
+//========================================
 
 exports.search = function(req, res) {
   Role.find({})
